adicionando configuracao no configuration service para pegar as configuracoes pelo git

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -3,10 +3,10 @@ server:
 spring:
   application:
     name: 'config-server'
-  profiles:
-    active: native
+
   cloud:
     config:
       server:
-        native:
-          search-locations: C:/projetos/server-config/ms-alura
+        git:
+          uri: https://github.com/GabrielCPDev/floricultura-config
+          search-paths: fornecedor
