--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,12 +1,14 @@
+
 server:
   port: 8888
+  
 spring:
   application:
     name: 'config-server'
-
   cloud:
     config:
       server:
         git:
+          default-label: main
           uri: https://github.com/GabrielCPDev/floricultura-config
           search-paths: fornecedor
