--- a/fornecedor/src/main/resources/application.yml
+++ b/fornecedor/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 server:
   port: 8081
 
@@ -5,8 +6,5 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
-    serviceUrl:
+    service-url:
       defaultZone: http://localhost:8761/eureka
-
-
-
