--- a/loja/src/main/resources/application.yml
+++ b/loja/src/main/resources/application.yml
@@ -1,9 +1,8 @@
-spring:
-    application:
-        name: 'loja'
-eureka:
-  client:
-    register-with-eureka: true
+
+server:  port: 8080
+
+spring:  application:    name: 'loja'
+
+eureka:  client:    register-with-eureka: true
     fetch-registry: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+    service-url:      defaultZone: http://localhost:8761/eureka
