--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 
 server:
   port: 8888
-  
+
+
 spring:
   application:
     name: 'config-server'
@@ -11,4 +12,12 @@ spring:
         git:
           default-label: main
           uri: https://github.com/GabrielCPDev/floricultura-config
-          search-paths: fornecedor
+          search-paths:
+            - fornecedor
+            - loja
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
