--- a/loja/src/main/resources/application.yml
+++ b/loja/src/main/resources/application.yml
@@ -1,8 +1,9 @@
+server:
+  port: 8080
 
-server:  port: 8080
-
-spring:  application:    name: 'loja'
-
-eureka:  client:    register-with-eureka: true
+eureka:
+  client:
+    register-with-eureka: true
     fetch-registry: true
-    service-url:      defaultZone: http://localhost:8761/eureka
+    service-url:
+      defaultZone: http://localhost:8761/eureka
