--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
           search-paths:
             - fornecedor
             - loja
+            - transportador
 eureka:
   client:
     register-with-eureka: true
