--- a/zull/src/main/resources/application.yml
+++ b/zull/src/main/resources/application.yml
@@ -13,4 +13,7 @@ management:
       exposure:
         include:
           - "routes"
-
+zuul:
+  sensitive-headers:
+    - Cookie
+    - Authorization
